force-app/main/default/objects/Bath_Custom_Pricing__c/Bath_Custom_Pricing__c.object-meta.xml
<CustomObject>
    <label>Bath Custom Pricing</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Bath Custom Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bath Custom Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>