force-app/main/default/objects/Bath_Custom_Pricing__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bath Custom Pricings</relationshipLabel>
    <relationshipName>Bath_Custom_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>