force-app/main/default/objects/Bath_Custom_Pricing__c/fields/Number_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shipment__c</fullName>
    <label>Number of Shipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>