force-app/main/default/objects/Bath_Custom_Pricing__c/fields/Package_Amount__c.field-meta.xml
<CustomField>
    <fullName>Package_Amount__c</fullName>
    <label>Package Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50000</fullName>
            </value>
            <value>
                <fullName>100000</fullName>
            </value>
            <value>
                <fullName>150000</fullName>
            </value>
            <value>
                <fullName>175000</fullName>
            </value>
            <value>
                <fullName>200000</fullName>
            </value>
            <value>
                <fullName>250000</fullName>
            </value>
            <value>
                <fullName>275000</fullName>
            </value>
            <value>
                <fullName>300000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>