force-app/main/default/objects/Bath_Custom_Pricing__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Studded Jewellery</fullName>
            </value>
            <value>
                <fullName>Plain Jewellery</fullName>
            </value>
            <value>
                <fullName>Preset Solitaire</fullName>
            </value>
            <value>
                <fullName>UnStud-Jwry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>