force-app/main/default/objects/Bath_Custom_Pricing__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Bath Custom Pricings</relationshipLabel>
    <relationshipName>Bath_Custom_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>