force-app/main/default/objects/Bath_Custom_Pricing__c/fields/Secure_logistics_rate__c.field-meta.xml
<CustomField>
    <fullName>Secure_logistics_rate__c</fullName>
    <label>Secure logistics rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>