force-app/main/default/objects/Bath_Custom_Pricing__c/fields/Shipment_charge__c.field-meta.xml
<CustomField>
    <fullName>Shipment_charge__c</fullName>
    <label>Shipment charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>