force-app/main/default/objects/Bath_Custom_Pricing__c/fields/Visit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Visit_Outcome__c</fullName>
    <label>Visit Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>